--- a/chat.css
+++ b/chat.css
@@ -328,5 +328,12 @@ div.loaded {
   opacity:0.7
 }
 
+div#modalZoomIn{
+  width:630px;
+  height:470px;
+  padding:15px;
+  text-align:center;
+}
+
 
 
